* Renamed BuilderImpl.java to IExecutorOutputChannel.java * Renamed CommandBuilder.java to CommandOutput.java * Finalized easy command building api. * Added kits feature. * Added warps and homes feature. * Reworked EssentialsAddonClassLoader.java and associates.